--- a/package.json
+++ b/package.json
@@ -10,28 +10,32 @@
     "lint:fix": "next lint --fix"
   },
   "dependencies": {
-    "@headlessui/react": "^1.4.2",
-    "axios": "^1.7.2",
-    "next": "^14.2.3",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "swr": "^1.3.0",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "@fontsource/roboto": "^5.0.13",
+    "@headlessui/react": "^1.4.2",
     "@mui/icons-material": "^5.15.18",
-    "@mui/material": "^5.15.18",
+    "@mui/material": "^5.15.19",
     "@mui/styled-engine-sc": "^6.0.0-alpha.18",
     "@mui/x-charts": "^7.5.0",
+    "@mui/x-date-pickers": "^7.6.1",
+    "axios": "^1.7.2",
     "date-fns": "^3.6.0",
+    "dayjs": "^1.11.11",
+    "next": "^14.2.3",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-hook-form": "^7.51.5",
     "rsuite": "^5.62.0",
-    "styled-components": "^6.1.11"
+    "styled-components": "^6.1.11",
+    "swr": "^1.3.0"
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.12.1",
     "@babel/preset-react": "^7.18.6",
     "@next/eslint-plugin-next": "^14.2.3",
     "@tailwindcss/forms": "^0.5.2",
+    "@types/node": "20.12.12",
     "autoprefixer": "^10.4.2",
     "eslint": "^8.27.0",
     "eslint-config-next": "^14.0.3",
@@ -39,7 +43,6 @@
     "postcss": "^8.4.6",
     "prettier": "^3.2.5",
     "tailwindcss": "^3.4.3",
-    "@types/node": "20.12.12",
     "typescript": "5.4.5"
   }
 }
